# gBase

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-macos.sh  build-windows.bat
gzyXML/: gzyXML.cpp  gzyXML.h  gzyXML.pro
include/gBase/: config.h  defines.h  gBase.h  gCKK.h  gDB.h  gList.h  gSqlite.h  gStringUtil.h  gTime.h  gXml.h  platform.h
main/: CMakeLists.txt  main.cpp
old/ODBaseTest/: ODBaseTest.pro  ODCKKTest.cpp  ODSqliteHandle_test.cpp  ODTimeUtilTest.cpp  ODVectorUtilTest.cpp
old/ODMBase/: ODBaseTypes.h  ODDBHandle.cpp  ODDBHandle.h  ODMBase.cpp  ODMBase.h  ODMBase.pro  ODMTest.cpp  ODMTest.h  ODSqliteHandle.cpp  ODSqliteHandle.h
old/ODUtil/: ODCKK.cpp  ODCKK.h  ODTimeUtil.cpp  ODTimeUtil.h  ODUtil.h  ODUtil.pro  ODVectorUtil.cpp  ODVectorUtil.h
sqlite3/: CMakeLists.txt
src/: CMakeLists.txt  gCKK.cpp  gDB.cpp  gList.cpp  gSqlite.cpp  gStringUtil.cpp  gTime.cpp  gXml.cpp
test/: CMakeLists.txt  ODMTest.h  gCKK_test.cpp  gDB_test.cpp  gSqlite_test.cpp  gStringUtil_test.cpp  gTime_test.cpp  gXml_test.cpp  main.cpp  test.pro  test.xml  tt.xml
